- Fix issue on Login Page [input-text where overlapped by (section class="row...")]   Solution: remove class="row ..." - Organizing Login CSS into a file, fix css images

--- a/grails-app/assets/stylesheets/grails.css
+++ b/grails-app/assets/stylesheets/grails.css
@@ -118,11 +118,11 @@ a.navbar-brand {
 }
 
 .svg #band {
-    background-image: url(../img/grails-cupsonly-logo-white.svg);
+    background-image: url(../images/grails-cupsonly-logo-white.svg);
 }
 
 .no-svg #band {
-    background-image: url(../img/groovy-logo-white.png);
+    background-image: url(../images/hds_explorer_logo.png);
 }
 
 @media (max-width: 1010px) {
@@ -627,7 +627,7 @@ h8 {
     display: block;
     width: 80px;
     height: 80px;
-    background-image: url(../img/icons-colset-2-its.png);
+    background-image: url(../images/icons-colset-2-its.png);
     float: left;
     margin-top: 12px;
     margin-right: 15px
